# tyr

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  install.ps1  install.sh  kondo.toml
.github/workflows/: build.yaml
docs/: features.md  ml.md  smart_groupinf.md
src/: categorise.rs  filename.rs  main.rs
src/organizer/: categorise.rs  filename.rs  intelligent.rs  mod.rs
