[package]
name = "kondo"
version = "0.3.0"
edition = "2021"
authors = ["Dawood Ailune@proton.me"]
description = "A smart file organizer that sorts files by extension categories or filename patterns"
license = "MIT"
repository = "https://github.com/Aelune/kondo"
keywords = ["file", "organizer", "cli", "filesystem", "utility"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = "4.5.46"
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
rayon = "1.8"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "kondo"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = true
